Refactored Builder (didn't like everything in the constructor). Modified all tests to support this.
Getting ready to work on buildShow.  Will turn this into it's own class
so we can do interesting things with the mask pattern.

--- a/sudoku2/war/index.html
+++ b/sudoku2/war/index.html
@@ -7,13 +7,7 @@
 <body>
 <h1>Welcome to Sudoku</h1>
 <p>
-<a href="puzzle.jsp">Easy</a>
-<p>
-<p>
-<a href="puzzle.jsp?level=30">Medium</a>
-<p>
-<p>
-<a href="puzzle.jsp?level=25">Hard</a>
-<p>
+<a href="puzzle.jsp">Let me build a puzzle a for you</a>
+</p>
 </body>
 </html>
